--- a/Centipede/Centipede.csproj
+++ b/Centipede/Centipede.csproj
@@ -60,17 +60,21 @@
     <Compile Include="GameManagement\SpriteSheet.cs" />
     <Compile Include="GameManagement\TextGameObject.cs" />
     <Compile Include="GameObjects\Bombs.cs" />
+    <Compile Include="GameObjects\Enemies.cs" />
+    <Compile Include="GameObjects\Player.cs" />
     <Compile Include="GameObjects\Bullet.cs" />
     <Compile Include="GameObjects\Button.cs" />
     <Compile Include="GameObjects\Explosion.cs" />
     <Compile Include="GameObjects\FirePatterns.cs" />
-    <Compile Include="GameObjects\LevelDesign.cs" />
-    <Compile Include="GameObjects\Player.cs" />
-    <Compile Include="GameObjects\Score.cs" />
+    <Compile Include="GameObjects\Weapons.cs" />
     <Compile Include="GameStates\GameOver.cs" />
+    <Compile Include="GameObjects\LevelDesign.cs" />
+    <Compile Include="GameObjects\Mouse.cs" />
     <Compile Include="GameStates\PlayingState.cs" />
+    <Compile Include="GameObjects\Score.cs" />
     <Compile Include="GameStates\StartScherm.cs" />
     <Compile Include="GameStates\Tutorial.cs" />
+    <Compile Include="GameObjects\Wall.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameObjects\Turret.cs" />
